# prl_project

./: .gitignore  CLAUDE.md  FOLD_VALIDATION_INFERENCE_GUIDE.md  PRL_spreadsheet-lstai_update_label_reference.csv  PRL_spreadsheet.csv  PRL_spreadsheet.xlsx  PRL_spreadsheet_label_reference.csv  Pipeline_Notes.md  current_labels.txt  labels_to_use.csv  notes.md  parse_PRL_sheet.ipynb  performance_metrics.csv  prl_project.code-workspace  project_structure.txt  pyproject.toml  requirements.txt  run_flair-phase-t1_wt115_ncrop1_summary.txt  run_wt115_ncrop4_summary.txt  run_wt135_ncrop4_summary.txt  running_jobs.note  running_jobs.txt  scratch.ipynb  setup_env.sh  subjects_to_process.txt  tmp.txt
analysis/: prl_image_stats-roi_train2_stage3_numcrops_bkd_constwt115_run2.csv  prl_inference_defprobposs_image_stats-roi_train2_stage3_numcrops_bkd_constwt115_run2.csv  prl_inference_image_stats-roi_train2_stage3_numcrops_bkd_constwt115_run2.csv  runs_to_analyze.txt  stage2_numcrops_dicece_metrics.csv
data/: .~lock.PRL_labels.xlsx#  PRL_labels.csv  PRL_labels.xlsx  subject-sessions-longit.json  subject-sessions.csv
helpers/: parallel.py  paths.py  shell_interface.py
hpc/: setup_env_hpc.sh  submit_single.sh
notebooks/: auto3dseg_sandbox.ipynb  classifying_prl.py  create_subject_lists.ipynb  evaluate_gridsearch.ipynb  evaluate_inference.ipynb  explore_oop_paradigm.ipynb  fold_image_stats.csv  gridsearch_metrics.csv  gridsearch_metrics_w_dice.csv  hpo_performance_metrics.csv  interrater_reliability.ipynb  interrater_reliability.py  lesion_diagnostics.ipynb  parse_PRL_sheet.ipynb  (+5 more)
(+229 files in other folders)
