[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prl-pipeline"
version = "0.1.0"
description = "PRL (Perilesional Rim Lesion) detection pipeline"
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "click",
    "loguru",
    "nibabel",
    "numpy",
    "pandas",
    "pyyaml",
    "tqdm",
]

[project.scripts]
prl = "cli:cli"

[tool.setuptools]
packages = ["core", "helpers", "preprocessing", "scripts"]
package-dir = {"" = "src"}
